public/style.css
body {
	margin: 0;
	text-align: center;
	overflow-y: scroll;
	font-family: "Bungee Hairline", cursive;
	color: rgb(0, 0, 0);
	overflow-x: hidden;
}
body::-webkit-scrollbar {
	display: none;
}
body {
	-ms-overflow-style: none; /* IE and Edge */
	scrollbar-width: none; /* Firefox */
}
#background {
	width: 100%;
	height: 100%;
	position: fixed;
	left: 0px;
	top: 0px;
	z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
}
#bg_clouds {
	object-fit: cover;
}
.stretch {
	width: 100%;
	height: 100%;
}
#parallax {
	z-index: -1;
	position: fixed;
	top: 0;
	margin-top: 0;
	width: 100%;
	height: 100vh;
	background-image: url(./images/cloud_PNG24.png),
		url(./images/Soft_Cloud_PNG_Clip_Art_Image.png),
		url(./images/purepng.com-cloudnaturecloudsmoke-9615246757368kjiz.png),
		url(./images/1-14969_clouds-realistic-cloud-clouds-png.png);
	background-position: 40% 100%, 60% 100%, 30% 120%, 70% 120%;
	background-repeat: no-repeat;
	background-size: 800px, 800px, 600px, 600px;
	animation: fadeIn ease 5s;
	-webkit-animation: fadeIn ease 5s;
	-moz-animation: fadeIn ease 5s;
	-o-animation: fadeIn ease 5s;
	-ms-animation: fadeIn ease 5s;
	transition-property: background-position;
	transition-duration: 5s;
}

header > * {
	margin: 1em;
	margin-bottom: 0;
	line-height: 2rem;
}

.filter,
.filter > button {
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	justify-content: center;
	font-family: "Quantico", sans-serif;
	padding: 1em;
}
.filter {
	max-width: 800px;
	margin: 0 auto;
}

.filter button,
li {
	list-style-type: none;
	display: inline;
	font-size: 1.1rem;
	color: rgb(44, 44, 44);
	padding: 0.25em;
	border-radius: 0.5em;
	cursor: pointer;
}

li:nth-child(1) {
	background-color: transparent;
}

.projects {
	display: flex;
	justify-content: space-around;
	flex-wrap: wrap;
}
.project {
	flex-basis: 500px;
	margin-bottom: 2%;
	font-family: "Bungee Hairline", cursive;
	line-height: 120%;
	padding: 1em;
}
@media screen and (max-width: 666px) {
	.project {
		width: 95%;
	}
}
.preview {
	width: 100%;
	border-radius: 5%;
}

/* filter buttons */
.unselected {
	background: linear-gradient(#7ba4ca, #5886ab);
	border: 1px solid #344a7a;
	color: #000000;
	text-shadow: 0 1px #828eb6;
	box-shadow: inset 0 1px 1px 0 #a1a5dd, 0 2px 0 -1px rgba(0, 0, 0, 0.2);
	cursor: pointer;
}

.unselected:hover {
	background: linear-gradient(#655ea8, #49508e);
	border: 1px solid #484186;
	color: #000000;
	text-shadow: 0 1px #5958b0;
	box-shadow: 0 2px 0 -1px rgba(0, 0, 0, 0.2);
}
.unselected:active {
	background: linear-gradient(#313c62, #434e74);
	box-shadow: inset 0 0 #3d3361, inset 0 2px 9px 1px #23244b;
	color: #000000;
	text-shadow: 0 1px #1b2039;
}
/* blinking all button */
/* @-webkit-keyframes blackWhite {
	0% {
		background-color: #313c62;
	}
	50% {
		background-color: #7ba4ca;
	}
	100% {
		background-color: #313c62;
	}
} */
.clear {
	background: rgb(143, 113, 113);
	-webkit-animation-name: blackWhite;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-duration: 3s;
	-webkit-animation-timing-function: ease;
}
.clear:hover,
.clear:focus {
	background: rgb(122, 93, 93);
}
.selected {
	border: 1px solid #344a7a;

	background: linear-gradient(#316241, #43744e);
	box-shadow: inset 0 0 #3d3361, inset 0 2px 9px 1px #23314b;
	color: #000000;
	text-shadow: 0 1px #1b2839;
}
.disabled {
	border: 1px solid #344a7a;

	background: linear-gradient(#313c62, #434e74);
	box-shadow: inset 0 0 #3d3361, inset 0 2px 9px 1px #23314b;
	color: #000000;
	text-shadow: 0 1px #1b2839;
	opacity: 33%;
}

/* preview fade-in/out */
.project {
	animation: fadeIn ease 2s;
	-webkit-animation: fadeIn ease 2s;
	-moz-animation: fadeIn ease 2s;
	-o-animation: fadeIn ease 2s;
	-ms-animation: fadeIn ease 2s;
}
@keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-moz-keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-webkit-keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-o-keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-ms-keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

.title {
	display: flex;
	justify-content: center;
	align-items: center;
	line-height: 0.8em;
}

.github {
	width: 40px;
	margin-left: 5%;
}
.github > img {
	width: 100%;
}

#pie {
	margin: auto;
	max-width: 800px;
}

.youtube {
	border-radius: 10px;
	width: 100%;
	height: 400px;
	display: block;
}

.youtubeContainer {
	padding-bottom: 30.25%;
	position: relative;
	max-width: 800px;
	margin: 0 auto;
	padding-left: 1em;
	padding-right: 1em;
}

